test/Constraints/rdar107724970.code
// RUN: %target-typecheck-verify-language

// rdar://107724970 – Make sure we don't crash.
enum E {
  case e(Int)
}
fn foo(_ x: E) {
  // https://github.com/apple/language/issues/65062
  immutable fn = {
    switch x {
    case E.e(_, _):
      // expected-error@-1 {{tuple pattern has the wrong length for tuple type 'Int'}}
      break
    }
  }
}
